@@ -8,7 +8,7 @@ buildscript {
     google()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:7.2.2'
+    classpath 'com.android.tools.build:gradle:8.1.2'
   }
 }
 
@@ -23,5 +23,11 @@ allprojects {
       name 'Google'
     }
     mavenCentral()
+  }
+}
+
+subprojects{
+  tasks.withType(Test).configureEach{
+    jvmArgs = jvmArgs + ['--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-exports=java.base/java.lang=ALL-UNNAMED', '--add-reads=java.base/java.lang=ALL-UNNAMED']
   }
 }
